clusters/talos-robbinsdale/apps/envoy-gateway-system/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: custom-proxy-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: robbinsdale
  # annotations:
    # cert-manager.io/cluster-issuer: raj-issuer
    # kubernetes.io/tls-acme: "true"
spec:
  addresses:
    - type: IPAddress
      value: 10.69.10.14
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: wildcard-raj-https
      protocol: HTTPS
      port: 443
      hostname: "*.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: raj-wildcard-tls
    - name: wildcard-luke-https
      protocol: HTTPS
      port: 443
      hostname: "*.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: luke-wildcard-tls
    - name: kafka-listener
      protocol: TLS
      port: 9092
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  # annotations:
    # cert-manager.io/cluster-issuer: raj-issuer
    # kubernetes.io/tls-acme: "true"
spec:
  addresses:
    - type: IPAddress
      value: 10.69.10.16
  gatewayClassName: eg
  listeners:
    - name: fleet-telemetry
      protocol: TLS
      port: 443
      hostname: "fleet-telemetry.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: tesla
      tls:
        mode: Passthrough
    - name: wildcard-raj-https
      protocol: HTTPS
      port: 443
      hostname: "*.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: raj-wildcard-tls
    - name: wildcard-luke-https
      protocol: HTTPS
      port: 443
      hostname: "*.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: luke-wildcard-tls
